--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,14 +12,14 @@
             <a class="nav-link" href="{{"/" | relative_url }}">Início</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{"/about" | relative_url }}">Sobre</a>
+            <a class="nav-link" href="{{"/about" | relative_url }}">About-me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
+            <a class="nav-link" href="{{ "/posts" | relative_url }}">blog</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{"/contact" | relative_url }}">Contato</a>
-          </li>
+	  <!--         <li class="nav-item"> 
+           <a class="nav-link" href="{{"/contact" | relative_url }}">Contato</a>
+	  </li> -->
         </ul>
       </div>
     </div>
