--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,9 @@
             <a class="nav-link" href="{{"/about" | relative_url }}">About-me</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{"/projects" | relative_url }}">Projects</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{{ "/posts" | relative_url }}">Blog</a>
           </li>
 	  <!--         <li class="nav-item"> 
